tests/tests/ui/create_scoped_not_scope.stderr
error[E0277]: this expression cannot be used as a Toasty create scope
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ this expression does not support scoped creation
   |
   = help: the trait `toasty::schema::Scope` is not implemented for `i64`
note: required by a bound in `toasty::codegen_support::scope_fields`
  --> $WORKSPACE/crates/toasty/src/codegen_support.rs
   |
   | pub fn scope_fields<S: Scope>(_scope: &S) -> S::Path<S::Item> {
   |                        ^^^^^ required by this bound in `scope_fields`
